# MiniRustDeskAgent

./: Cargo.toml
libs/clipboard/: Cargo.toml  build.rs
libs/clipboard/src/: lib.rs
libs/clipboard/src/platform/: mod.rs
libs/clipboard/src/windows/: wf_cliprdr.c
libs/hbb_common/: Cargo.toml  build.rs
libs/hbb_common/src/: bytes_codec.rs  config.rs  fs.rs  lib.rs  proxy.rs  socket_client.rs
libs/hbb_common/src/platform/: windows.rs
libs/hbb_common/src/protos/: message.rs  rendezvous.rs
libs/scrap/: Cargo.toml  build.rs
libs/scrap/src/: lib.rs
