[package]
name = "MiniRustDeskAgent"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4"
thiserror = "1.0"
serde = "1.0"
serde_derive = "1.0"
clipboard = { path = "libs/clipboard" }
hbb_common = { path = "libs/hbb_common" }
scrap = { path = "libs/scrap"}

[lib]
name = "librustdeskagent"