[package]
name = "scrap"
version = "0.1.0"
edition = "2021"

[features]
hwcodec = ["dep:hwcodec"]
vram = ["hwcodec/vram"]

[dependencies]
cfg-if = "1.0"
num_cpus = "1.15"
lazy_static = "1.4"
hbb_common = { path = "../hbb_common" }
webm = { git = "https://github.com/rustdesk-org/rust-webm" }
serde = {version="1.0", features=["derive"]}

[dependencies.winapi]
version = "0.3"
default-features = true
features = ["dxgi", "dxgi1_2", "dxgi1_5", "d3d11", "winuser", "winerror", "errhandlingapi", "libloaderapi"]


[build-dependencies]
target_build_utils = "0.3"
bindgen = "0.65"
pkg-config = { version = "0.3.27", optional = true }


[dependencies.hwcodec]
git = "https://github.com/rustdesk-org/hwcodec"
optional = true


